# app1

./: .gitignore  .gitlab-ci.yml  .module  CMakeLists.txt  CMakeLists.txt.user.4.9-pre1  CMakeLists.txt.user.PXkNAp  CMakeLists.txt.user.a6e0c27  CMakeLists.txt.user.ispkCT  CMakeLists.txt.user.uMPvZl  README.md  autobuild-debug.bat  autobuild-internal.bat  autobuild.bat  aws_s3.cpp  aws_s3.h  main.cpp  makeInstaller.bat  mkdocs.yml  qml.qrc  qtquickcontrols2.conf  recordVersion.bat  recover.bat  storage.cpp  storage.h
DeepInspection/: .module  config_.json  custombuild.bat
DeepInspection/qtinstall/config/: config.xml
DeepInspection/qtinstall/mypackages/content/data/: config_.json
DeepInspection/qtinstall/mypackages/content/meta/: installexe.qs
DeepInspection/qtinstall/mypackages/content2/meta/: package.xml
DeepInspection/qtinstall/mypackages/content4/data/: .language
DeepInspection/qtinstall/mypackages/content4/meta/: package.xml
DeepInspection/resource/: logo.rc
NWLan/: .module  autobuild-nw.bat  autobuild.bat  config_.json  custombuild.bat
NWLan/qtinstall/config/: config.xml  controller.qs
NWLan/qtinstall/mypackages/content/meta/: installexe.qs  package.xml
com/: client.h  server.h  unitTest.cpp
deepsight_anno/: custom.cpp  model.cpp  model.h  project.cpp  protocal.h  storage.cpp  storage.h  task.cpp  task.h  user.cpp
design/: project.json  users.json
design/project/: project_id.json
design/project/project_id/image/: image_id.json
design/project/project_id/task/: task_id.json
design/project/project_id/task/task_id/: jobs.json
design/projects/: project_id.json
design/projects/project_id/: images.json  labels.json  tasks.json
design/projects/project_id/images/: image_id.json
design/projects/project_id/tasks/: task_id.json
design/projects/project_id/tasks/task_id/: jobs.json
design/user/: user_id.json
device/: camera.cpp  camera.h  io.cpp
docs/: about.md  abstract.md  index.md
docs/gui/: log.md  twindow.md
docs/gui/basic/: autosize.md  dynamicQML.md  file.md  flip.md  gridder.md  msgdialog.md  swipe.md
docs/gui/component/: camera.md  io.md  list.md  log.md  treeNodeView.md
docs/qsg/: imagePool.md  qsgBoard.md  qsgBoardPlugin.md  qsgModel.md
docs/storage/: awsStorage.md  fsStorage.md  minIO.md  stgData.md
gui/: Check.ui.qml  Combo.ui.qml  Edit.ui.qml  Log.qml  Log2.qml  LogPanel.ui.qml  MsgDialog.qml  deepsight_anno.qml  log.qml  main.qml
gui/Basic/: AutoSize.qml  Check.ui.qml  ColorSelect.qml  Combo.ui.qml  DynamicQML.qml  Edit.ui.qml  File.qml  Flip.qml  Gridder.qml  Histogram.qml  LineChart.qml  List.qml  MsgDialog.qml  Navigation.qml  Nest.qml  Search.qml  Spin.qml  THistogram.qml  TWindow.qml  Track.qml
gui/Component/: Camera.qml  IO.qml  List.qml  Log0.ui.qml  Matrix.qml  PageList.qml  Progress.qml  Status.qml  Status0.ui.qml
gui/Deepsight/Component/: BoardMenu.qml  JobLogPanel.qml  JobParamButton.qml  LabelButton.qml  LabelEdit.qml  LabelFilterWindow.qml  MakeSure.qml  NewObject.qml  ROIPanel.qml  ResultWindow.qml  ScatterButton.qml  StageButton.qml  StageFilterWindow.qml  TransformImage.qml  ViewButton.qml
gui/Deepsight/Page/: Project.qml  Task.qml  User.qml
gui/TreeNodeView/: TreeNode.qml  TreeNodeDelete.qml  TreeNodeTag.qml  TreeNodeView.qml
manualshow/: imageboard.h
pack/: config_.json  main.cpp
packtools/: config_.json  continue.bat
qsgShow/: imagePool.cpp  imagePool.h  qsgBoard.cpp  qsgBoard.h  qsgModel.cpp  qsgModel.h
qtinstall/config/: controller.qs
qtinstall/content2/meta/: package.xml
qtinstall/mypackages/content/data/: config_.json
qtinstall/mypackages/content/meta/: installexe.qs
qtinstall/mypackages/content2/data/: config_.json
qtinstall/mypackages/content3/meta/: package.xml
resource/: config_.json  logo.rc
resource/manual/: config_.json  readme.md
serial/: modbusMaster.cpp  modbusMaster.h
shape/: drawFree.cpp  editNode.cpp  select.cpp  shape.cpp
socket/: client.cpp  protocal.h  server.cpp  unitTest.cpp
socket2/: logcat.h  tcpserver.cpp  tcpserver.h  tcpsocket.cpp  tcpsocket.h
storage/: awsStorage.cpp  awsStorage.h  aws_s3.cpp  aws_s3.h  mysql.cpp  storage.cpp  storage.h
util/: cv.cpp  cv.h  image.cpp  pack.cpp  py.cpp  py.h
